Orbslam3_Install_Problem
Configuring and building Thirdparty/DBoW2 ...
mkdir: cannot create directory ‘build’: File exists
CMake Error at CMakeLists.txt:31 (message):
  OpenCV > 2.4.3 not found.



open CMakeLists.txt
change 
	find_package(OpenCV 3)
to
	find_package(OpenCV 4)





/home/aking/orbslam3/ORB_SLAM3/include/CameraModels/KannalaBrandt8.h:105:21: warning: ‘ORB_SLAM3::KannalaBrandt8::precision’ will be initialized after [-Wreorder]
         const float precision;
                     ^~~~~~~~~
/home/aking/orbslam3/ORB_SLAM3/include/CameraModels/KannalaBrandt8.h:95:26: warning:   ‘std::vector<int> ORB_SLAM3::KannalaBrandt8::mvLappingArea’ [-Wreorder]
         std::vector<int> mvLappingArea;
                          ^~~~~~~~~~~~~
/home/aking/orbslam3/ORB_SLAM3/include/CameraModels/KannalaBrandt8.h:65:9: warning:   when initialized here [-Wreorder]
         KannalaBrandt8(KannalaBrandt8* pKannala) : GeometricCamera(pKannala->mvParameters), precision(pKannala->precision), mvLappingArea(2,0) ,tvr(nullptr) {
         ^~~~~~~~~~~~~~
CMakeFiles/Makefile2:289: recipe for target 'CMakeFiles/ORB_SLAM3.dir/all' failed
make[1]: *** [CMakeFiles/ORB_SLAM3.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 69%] Linking CXX shared library ../../../Thirdparty/g2o/lib/libg2o.so
[ 69%] Built target g2o
Makefile:83: recipe for target 'all' failed
make: *** [all] Error 2






open /ORB_SLAM3/include/CameraModels/KannalaBrandt8.h
add
#include <unistd.h>

and 
include <opencv2/opencv.hpp>




open build.sh

that 
change all
make -j

to 

make -j1




/home/aking/orbslam3/ORB_SLAM3/src/Tracking.cc: In member function ‘cv::Mat ORB_SLAM3::Tracking::GrabImageMonocular(const cv::Mat&, const double&, std::__cxx11::string)’:
/home/aking/orbslam3/ORB_SLAM3/src/Tracking.cc:1045:38: error: ‘CV_RGB2GRAY’ was not declared in this scope
             cvtColor(mImGray,mImGray,CV_RGB2GRAY);
                                      ^~~~~~~~~~~


add
#include <opencv2/imgproc/types_c.h>




/home/aking/orbslam3/ORB_SLAM3/src/LoopClosing.cc:1908:36: error: ‘CV_GRAY2BGR’ was not declared in this scope
         cv::cvtColor(img_i, img_i, CV_GRAY2BGR);
                                    ^~~~~~~~~~~

add
#include <opencv2/imgproc/types_c.h>

FrameDrawer.cc:97:24: error: ‘CV_GRAY2BGR’ was not declared in this scope
         cvtColor(im,im,CV_GRAY2BGR);
                        ^~~~~~~~~~~
add
#include <opencv2/imgproc/types_c.h>


m3/ORB_SLAM3/src/Map.cc: In member function ‘void ORB_SLAM3::Map::printReprojectionError(std::__cxx11::list<ORB_SLAM3::KeyFrame*>&, ORB_SLAM3::KeyFrame*, std::__cxx11::string&, std::__cxx11::string&)’:
/home/aking/orbslam3/ORB_SLAM3/src/Map.cc:500:36: error: ‘CV_GRAY2BGR’ was not declared in this scope
         cv::cvtColor(img_i, img_i, CV_GRAY2BGR);
                                    ^~~~~~~~~~~

add
#include <opencv2/imgproc/types_c.h>



/home/aking/orbslam3/ORB_SLAM3/src/Optimizer.cc:6645:46: error: ‘CV_GRAY2BGR’ was not declared in this scope
                 cv::cvtColor(imLeft, imLeft, CV_GRAY2BGR);
                                              ^~~~~~~~~~~

add
#include <opencv2/imgproc/types_c.h>

PnPsolver.cc:728:43: error: ‘CvMat’ does not name a type
 void PnPsolver::find_betas_approx_3(const CvMat * L_6x10, const CvMat * Rho,
                                           ^~~~~
/home/aking/orbslam3/ORB_SLAM3/src/PnPsolver.cc:728:65: error: ‘CvMat’ does not name a type
 void PnPsolver::find_betas_approx_3(const CvMat * L_6x10, const CvMat * Rho,

 error: ‘CvMat’ has not been declared
   void fill_M(CvMat * M, const int row, const double * alphas, const double u, const double v);



add
#include <opencv2/imgproc/types_c.h>
#include <opencv2/opencv.hpp>
using namespace cv;


/home/aking/orbslam3/ORB_SLAM3/src/Sim3Solver.cc:307:22: error: ‘CV_REDUCE_SUM’ was not declared in this scope
     cv::reduce(P,C,1,CV_REDUCE_SUM);

add
#include <opencv2/imgproc/types_c.h>




ON ./build_ros.sh 
Build type: Release
-- Using flag -std=c++11.
CMake Error at CMakeLists.txt:37 (message):
  OpenCV > 2.4.3 not found.

edit /home/aking/orbslam3/ORB_SLAM3/Examples/ROS/ORB_SLAM3/CMakeListes.txt

find_package(OpenCV 3.0 QUIET)
to
find_package(OpenCV 4.0 QUIET)
